<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:id="@+id/bottom_wrapper"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorDelete"
        android:gravity="center">

        <ImageView
            android:id="@+id/trash"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="10"
            android:src="@drawable/ic_trash" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/unpair_ask_text"
            android:textColor="@color/colorPrimaryIconsText"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_unpair"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/unpair_button_label"
            android:textColor="@color/colorPrimaryIconsText" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_use"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/use_button_label"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</com.daimajia.swipe.SwipeLayout>