<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.uqac.liara.imurecording.CommunicationActivity"
    tools:showIn="@layout/activity_communication">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hiking_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:theme="@style/Inputs">

            <EditText
                android:id="@+id/hiking_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hiking_name_hint"
                android:inputType="text"
                android:textAllCaps="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sensor_location"
            android:layout_below="@+id/hiking_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:theme="@style/Inputs">

            <EditText
                android:id="@+id/sensor_location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sensor_location_hint"
                android:inputType="text"
                android:textAllCaps="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:layout_below="@+id/sensor_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:theme="@style/Inputs">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:textAllCaps="true"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
